--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
     .sub{color:var(--muted);margin-bottom:14px}
     .card{background:var(--card);border:1px solid var(--line);border-radius:16px;padding:16px;margin-bottom:16px}
     label{display:block;color:var(--muted);margin-bottom:6px}
-    select, textarea, input[type=text], .file-input{
+    select, textarea, input[type=text], input[type=file]{
       width:100%; background:#fff; color:var(--text); border:1px solid var(--line);
       border-radius:var(--radius); padding:10px 12px; outline:none; height:var(--ctl-h);
     }
-    textarea{height:56px; resize:vertical}
     .btn{
       appearance:none; border:1px solid var(--line); background:#fff; color:var(--text);
       padding:10px 14px; border-radius:var(--radius); cursor:pointer; transition:all .15s ease;
@@ -34,7 +33,6 @@
     .btn:hover{border-color:var(--accent-strong);box-shadow:0 0 0 3px rgba(96,165,250,.2)}
     .btn.acc{background:var(--accent);border-color:var(--accent);color:#fff}
     .btn.acc:hover{background:var(--accent-strong);border-color:var(--accent-strong)}
-    .btn.icon{width:var(--ctl-h); padding:0}
     .row{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
     .hint{color:#64748b;font-size:12px}
     .err{color:#ef4444;font-family:ui-monospace,monospace}
@@ -66,8 +64,8 @@
   <div class="wrap">
     <h1>클래스어라운드 카카오톡 입장자 체크봇</h1>
     <div class="sub">
-      1) <b>Google 로그인</b> 후, 2) <b>관리자(⚙)</b>에서 <b>스프레드시트 링크 + 읽을 열</b>을 등록, 3) 메인에서 <b>읽기 시트</b>/<b>공유 시트</b>를 선택해 실행합니다.
-      공유 시트는 <b>D열=이름</b>, <b>C열=코드(4자리 등)</b>, <b>S열=상태</b> 규칙을 사용합니다.
+      1) <b>Google 로그인</b> → 2) <b>관리자(⚙)</b>에서 <b>스프레드시트 링크 + 읽을 열</b> 등록 → 3) 메인에서 <b>읽기 시트/공유 시트</b> 선택 후 실행.<br>
+      공유 시트는 <b>D=이름</b>, <b>E=전화</b>, <b>S=상태</b> 기준이며, 동명이인 시 전화 <b>끝 4자리</b>로 재매칭합니다.
     </div>
 
     <!-- 로그인/상태 -->
@@ -90,14 +88,14 @@
           <div class="hint">예: “… 권지혁/3788님이 입장하셨습니다.”</div>
         </div>
 
-        <!-- 2) 스프레드시트 선택 + 시트 선택 -->
+        <!-- 2) 스프레드시트 선택 + 시트 목록 -->
         <div>
           <label>로스터 소스 (스프레드시트)</label>
           <div class="row">
             <select id="sheetPackSelect" style="min-width:220px"></select>
             <button id="refreshMeta" class="btn" type="button">시트 목록 새로고침</button>
           </div>
-          <div class="hint">읽을 열: <b id="readColHint">-</b></div>
+          <div class="hint">읽기 시작 행: <b id="readStartHint">2</b> · 읽을 열: <b id="readColHint">-</b> · 공유 시작 행: <b id="writeStartHint">2</b></div>
         </div>
 
         <!-- 3) 읽기 시트 / 공유 시트 -->
@@ -107,7 +105,7 @@
             <select id="readSheetSelect" style="min-width:180px"></select>
             <select id="writeSheetSelect" style="min-width:180px"></select>
           </div>
-          <div class="hint">공유 시트는 <b>C열(코드) + D열(이름)</b>으로 개체 매칭, <b>S열</b>에 결과를 씁니다.</div>
+          <div class="hint">공유 시트는 <b>D(이름)→E(전화끝4)</b> 순으로 매칭, 결과는 <b>S</b>에 기록.</div>
         </div>
       </div>
 
@@ -156,7 +154,12 @@
   </aside>
 
 <script>
-/* =====================[ 0) 공통 / OAuth ]===================== */
+/* =====================[ 상수: 시작 행 ]===================== */
+// 1-based 시작 행 (필요 시 숫자만 바꾸세요)
+const READ_START_ROW  = 2; // 읽기 시트(명단) 시작 행
+const WRITE_START_ROW = 2; // 공유 시트(상태) 시작 행
+
+/* =====================[ 공통 / OAuth ]===================== */
 const CLIENT_ID = "18228268359-iifm4ck3j9kqj74eh1p90tco1k2mbpi0.apps.googleusercontent.com"; // ★ 교체하세요
 
 const $$ = (id)=>document.getElementById(id);
@@ -194,24 +197,26 @@ function sanitizeColumn(input){ if(!input) return null; let s=String(input).trim
   }
   if(/^[A-Z]+$/.test(s)) return s; return null;
 }
+// 전화번호에서 숫자만 남기고 끝 4자리
+function last4Digits(s){ const d = String(s || '').replace(/\D/g, ''); return d.slice(-4); }
 
-// OAuth
+/* ===== OAuth (GIS) ===== */
 let accessToken=null, tokenClient=null;
 function initAuth(){
-  try{
-    tokenClient = google.accounts.oauth2.initTokenClient({
-      client_id: CLIENT_ID,
-      scope: 'https://www.googleapis.com/auth/spreadsheets',
-      prompt: '',
-      callback: (res)=>{ accessToken = res.access_token; $$("authState").textContent='로그인 완료'; setAuthErr(''); }
-    });
-  }catch(e){ setAuthErr('OAuth 초기화 실패: ' + e.message); }
+  if(!window.google?.accounts?.oauth2){ setAuthErr('GIS 로드 실패(네트워크/도메인 확인)'); return; }
+  tokenClient = google.accounts.oauth2.initTokenClient({
+    client_id: CLIENT_ID,
+    scope: 'https://www.googleapis.com/auth/spreadsheets',
+    prompt: '',
+    callback: (res)=>{ accessToken = res.access_token; $$("authState").textContent='로그인 완료'; setAuthErr(''); },
+    error_callback: (err)=>{ setAuthErr('OAuth 오류: ' + (err?.error || err?.type || JSON.stringify(err))); console.error('OAuth error:', err); }
+  });
 }
-function requestAccess(){ if(!tokenClient){ setAuthErr('OAuth 초기화 필요'); return; } tokenClient.requestAccessToken({prompt:'consent'}); }
+function requestAccess(){ if(!tokenClient){ setAuthErr('OAuth 초기화 실패'); return; } tokenClient.requestAccessToken({prompt:'consent'}); }
 function revokeAccess(){ if(accessToken){ google.accounts.oauth2.revoke(accessToken, ()=>{ accessToken=null; $$("authState").textContent='미로그인'; }); } }
 function requireAuth(){ if(!accessToken) throw new Error('먼저 Google 로그인하세요.'); }
 
-// Sheets REST
+/* ===== Sheets REST ===== */
 async function gFetch(url, init){
   requireAuth();
   const res = await fetch(url, { ...(init||{}), headers: { ...(init&&init.headers||{}), Authorization:'Bearer '+accessToken, 'Content-Type':'application/json' }});
@@ -232,8 +237,8 @@ async function batchUpdateValues(spreadsheetId, dataRanges){
   return await gFetch(url, { method:'POST', body: JSON.stringify({ valueInputOption:'USER_ENTERED', data: dataRanges })});
 }
 
-/* =====================[ 1) 관리자: 스프레드시트 등록 ]===================== */
-const PACKS_KEY='ca_gsapi_sources_v1';
+/* =====================[ 관리자: 스프레드시트 등록 ]===================== */
+const PACKS_KEY='ca_gsapi_sources_v2';
 const loadPacks=()=>{ try{return JSON.parse(localStorage.getItem(PACKS_KEY)||'[]');}catch(e){return [];} };
 const savePacks=(ps)=> localStorage.setItem(PACKS_KEY, JSON.stringify(ps));
 const addPack=(p)=>{ const a=loadPacks(); a.push(p); savePacks(a); };
@@ -259,17 +264,21 @@ function renderAdmList(){
   if(!list.length){ tb.innerHTML='<tr><td colspan="4" style="color:#64748b">없음</td></tr>'; $$("admMeta").textContent=''; return; }
   list.forEach(p=>{
     const tr=document.createElement('tr');
-    tr.innerHTML=`<td>${p.label}</td><td>${p.sheets?.length||0}</td><td>${p.readCol}</td><td><button class="btn" data-del="${p.id}">삭제</button></td>`;
+    tr.innerHTML=`<td>${p.label}</td><td>${p.sheets?.length||0}</td><td>${p.readCol}</td><td><button class="btn" data-del="${p.id}" type="button">삭제</button></td>`;
     tb.appendChild(tr);
   });
   tb.querySelectorAll('button[data-del]').forEach(b=> b.onclick=()=>{ removePack(b.getAttribute('data-del')); renderAdmList(); populatePacks(); });
   $$("admMeta").textContent = `총 ${list.length}개 연결 · ${new Date().toLocaleString()}`;
 }
 
-/* =====================[ 2) 메인: 소스/시트 선택 ]===================== */
+/* =====================[ 메인: 소스/시트 선택 ]===================== */
 function populatePacks(){
   const packs=loadPacks(); const sel=$$("sheetPackSelect"); sel.innerHTML='';
-  if(!packs.length){ sel.appendChild(new Option('(관리자에서 스프레드시트 연결)','')); $$("readColHint").textContent='-'; $$("readSheetSelect").innerHTML=''; $$("writeSheetSelect").innerHTML=''; return; }
+  if(!packs.length){
+    sel.appendChild(new Option('(관리자에서 스프레드시트 연결)',''));
+    $$("readColHint").textContent='-'; $$("readStartHint").textContent=READ_START_ROW; $$("writeStartHint").textContent=WRITE_START_ROW;
+    $$("readSheetSelect").innerHTML=''; $$("writeSheetSelect").innerHTML=''; return;
+  }
   sel.appendChild(new Option('스프레드시트 선택',''));
   packs.forEach(p=> sel.appendChild(new Option(p.label, p.id)));
   const prev=sessionStorage.getItem('ca_prev_pack'); if(prev){ const o=[...sel.options].find(x=>x.value===prev); if(o) o.selected=true; }
@@ -288,13 +297,13 @@ function onPackChanged(){
   const packs=loadPacks(); const p=packs.find(x=>x.id===id);
   const readSel=$$("readSheetSelect"), writeSel=$$("writeSheetSelect");
   readSel.innerHTML=''; writeSel.innerHTML='';
-  if(!p){ $$("readColHint").textContent='-'; return; }
-  $$("readColHint").textContent=p.readCol;
+  if(!p){ $$("readColHint").textContent='-'; $$("readStartHint").textContent=READ_START_ROW; $$("writeStartHint").textContent=WRITE_START_ROW; return; }
+  $$("readColHint").textContent=p.readCol; $$("readStartHint").textContent=READ_START_ROW; $$("writeStartHint").textContent=WRITE_START_ROW;
   readSel.appendChild(new Option('읽기 시트 선택','')); writeSel.appendChild(new Option('공유 시트 선택',''));
   (p.sheets||[]).forEach(t=>{ readSel.appendChild(new Option(t,t)); writeSel.appendChild(new Option(t,t)); });
 }
 
-/* =====================[ 3) 카톡 로그 파싱 ]===================== */
+/* =====================[ 카톡 로그 파싱 ]===================== */
 const JOIN_PAT = /(.*?)님이\s*(입장하셨습니다|들어왔습니다|입장했습니다|들어오셨습니다)\./;
 const LEAVE_PAT = /(.*?)님이\s*(퇴장하셨습니다|나갔습니다|퇴장했습니다|나가셨습니다)\./;
 const NICK_PATTERN = /^\s*([A-Za-z0-9가-힣·\s]+?)\s*[\/-]?\s*(\d{4})\s*$/;
@@ -315,7 +324,7 @@ function splitNickname(nick){
   return {name:m[1].trim(), digits:m[2]};
 }
 
-/* =====================[ 4) 실행: 읽기 → 판정 → 공유시트 쓰기 ]===================== */
+/* =====================[ 실행: 읽기 → 판정 → 공유시트 쓰기 ]===================== */
 async function runMain(){
   try{
     setErr(''); $$("results").innerHTML='';
@@ -348,78 +357,65 @@ async function runMain(){
       }
     }
 
-    // 2) 읽기 시트에서 명단 가져오기 (readCol)
-    const data = await getRange(sheetId, `${readSheet}!${readCol}:${readCol}`);
+    // 2) 읽기 시트에서 명단 가져오기 (READ_START_ROW부터)
+    const data = await getRange(sheetId, `${readSheet}!${readCol}${READ_START_ROW}:${readCol}`);
     const roster = (data.values||[]).map(r => String(r[0]??'').trim()).filter(Boolean);
     const rosterSet = new Set(roster);
 
-    // 3) 보고서 만들기 (동명이인: digits 다수면 "동명이인 확인 필요"로 처리)
+    // 3) 보고서 만들기 (동명이인: digits 다수면 "동명이인 확인필요" 처리)
     const report=[];
     for(const name of roster){
       const set=activeByName.get(name)||new Set();
       if(set.size===0) report.push([name,'미입장','','']);
       else if(set.size===1){ const only=[...set][0]; report.push([name,'입장',`${name}/${only}`,'']); }
-      else { const ids=[...set].sort().map(d=>`${name}/${d}`).join('; '); report.push([name,'동명이인 확인필요',ids,'같은 이름으로 서로 다른 4자리 번호 다수(자동 미입장)']); }
+      else { const ids=[...set].sort().map(d=>`${name}/${d}`).join('; '); report.push([name,'동명이인 확인필요',ids,'전화 미입력 등으로 모호']); }
     }
 
-    // 4) 공유 시트의 C,D,S 열을 읽어 매칭 후 S에 상태 쓰기
-    //    - 매칭 규칙:
-    //       (1) C(코드)+D(이름) 모두 일치 → 그 사람으로 간주 (동명이인 해결)
-    //       (2) C가 비어있고 D만 일치 → 이름만으로 매칭
-    //       (3) D만 같고 C가 다른 경우 → 다른 사람으로 간주(갱신하지 않음)
-    //    - 상태 선정:
-    //       name이 roster에 있고 activeByName[name]의 set.size===1이고 그 digits==C면 '입장'
-    //       set.size===0 → '미입장'
-    //       set.size>1 → 모호함 → 갱신하지 않음
-    const writeRange = `${writeSheet}!C:S`; // C..S
+    // 4) 공유 시트의 D(이름), E(전화) 를 읽어 S열(상태) 갱신 (WRITE_START_ROW부터)
+    //    매칭 규칙:
+    //      1) 이름(D) 일치로 후보
+    //      2) 동명이인이면 전화(E) 끝4로 재매칭
+    //         - 전화 없고 동명이인이면 모호 → 기록 X
+    //      3) 이름만 있고(set.size===1)이면 '입장'
+    const writeRange = `${writeSheet}!D${WRITE_START_ROW}:S`; // D..S
     const wdata = await getRange(sheetId, writeRange);
-    const rows = wdata.values || []; // 각 행은 C부터 시작
+    const rows = wdata.values || [];
     const updates = [];
 
-    // 빠른 조회용 맵
-    const statusByName = new Map();       // name -> '입장' | '미입장' | 'amb'
-    const statusByNameCode = new Map();   // `${name}|${code}` -> '입장'|'미입장'
-    for(const name of roster){
-      const set = activeByName.get(name)||new Set();
-      if(set.size===0){ statusByName.set(name,'미입장'); }
-      else if(set.size===1){ const code=[...set][0]; statusByName.set(name,'입장'); statusByNameCode.set(`${name}|${code}`,'입장'); }
-      else { statusByName.set(name,'amb'); } // 모호
-    }
+    const S_INDEX = 15; // D..S 범위에서 S의 인덱스(D=0 → S=15)
 
-    // rows[0]가 헤더일 수도 있으니, 첫 행이 D='이름' 이면 건너뜀
-    for(let i=0;i<rows.length;i++){
+    for (let i = 0; i < rows.length; i++) {
       const r = rows[i] || [];
-      const code = String(r[0]??'').trim();       // C
-      const name = String(r[1]??'').trim();       // D
-      const sIdx = 16;                             // C..S 범위에서 S의 index (C=0 → S=16)
-      if(!name || name==='이름') continue;
+      const name = String(r[0] ?? '').trim();     // D
+      const phone = String(r[1] ?? '').trim();    // E
+      if (!name || (WRITE_START_ROW===2 && name==='이름')) continue; // 헤더/빈행 스킵
 
-      let newStatus=null;
+      // 명단(읽기 시트)에 없는 이름은 보통 스킵 (원치 않으면 이 조건 제거)
+      if (!rosterSet.has(name)) continue;
 
-      if(code){ // 코드가 있으면 이름+코드로만 매칭
-        const k = `${name}|${code}`;
-        if(statusByNameCode.has(k)) newStatus = statusByNameCode.get(k); 
-        else {
-          // 코드가 있는데 현재 입장 세트에 이 코드가 없으면 '미입장'으로 내림(명단에 있을 때)
-          if(rosterSet.has(name)) newStatus = '미입장';
+      const set = activeByName.get(name) || new Set();
+      let newStatus = null;
+
+      if (set.size === 0) {
+        newStatus = '미입장';
+      } else {
+        const p4 = last4Digits(phone);
+        if (p4) {
+          newStatus = set.has(p4) ? '입장' : '미입장';
+        } else {
+          if (set.size === 1) newStatus = '입장';
+          else newStatus = null; // 동명이인 + 전화없음 → 모호 → 기록 생략
         }
-      }else{
-        // 코드 없으면 이름만으로. 단, 모호하면 패스
-        const st = statusByName.get(name);
-        if(st==='입장' || st==='미입장') newStatus = st;
       }
 
-      if(newStatus){ // 갱신
-        const rowNumber = i+1; // C:S의 첫 행 기준. 실제 시트 행 번호 = rowNumber
-        updates.push({ range:`${writeSheet}!S${rowNumber}`, values:[[newStatus]] });
-        // 메모리상 미리 반영(다음 로직엔 영향 X)
-        if(r.length<=sIdx) r[sIdx]=newStatus; else r[sIdx]=newStatus;
+      if (newStatus !== null) {
+        const rowNumber = WRITE_START_ROW + i; // 실제 시트 행 번호
+        updates.push({ range: `${writeSheet}!S${rowNumber}`, values: [[newStatus]] });
+        if (r.length <= S_INDEX) r[S_INDEX] = newStatus; else r[S_INDEX] = newStatus;
       }
     }
 
-    if(updates.length){
-      await batchUpdateValues(sheetId, updates);
-    }
+    if (updates.length) await batchUpdateValues(sheetId, updates);
 
     // 5) UI 렌더
     $$("results").innerHTML='';
@@ -430,7 +426,7 @@ async function runMain(){
   }catch(e){ setErr('오류: '+e.message); console.error(e); }
 }
 
-/* =====================[ 5) 데모 ]===================== */
+/* =====================[ 데모 ]===================== */
 function runDemo(){
   setErr(''); $$("results").innerHTML='';
   const roster=['권지혁','김민정','홍길동','영희'];
@@ -462,7 +458,7 @@ function runDemo(){
   showTable('데모 결과', ['name','status','matched_id','notes'], report);
 }
 
-/* =====================[ 6) 이벤트 바인딩 ]===================== */
+/* =====================[ 이벤트 바인딩 ]===================== */
 window.addEventListener('load', ()=>{ if(window.google?.accounts?.oauth2) initAuth(); });
 window.addEventListener('DOMContentLoaded', ()=>{
   $$("gsLoginBtn").onclick = requestAccess;
