--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ const READ_START_ROW  = 2; // 읽기 시트(명단) 시작 행 (1-based)
 const WRITE_START_ROW = 2; // 공유 시트(상태) 시작 행 (1-based)
 
 /* =====================[ 공통 / OAuth ]===================== */
-const CLIENT_ID = "YOUR_CLIENT_ID.apps.googleusercontent.com"; // ★ 교체하세요
+const CLIENT_ID = "18228268359-iifm4ck3j9kqj74eh1p90tco1k2mbpi0.apps.googleusercontent.com"; // ★ 교체하세요
 
 const $$ = (id)=>document.getElementById(id);
 function setErr(msg){ $$("err").textContent = msg||""; }
